--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,16 @@
         <meta charset="utf-8"/>
     </head>
     <body>
-        <h6>welcome to chat app</h6>
+        <h1>welcome to chat app</h1>
     </body>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        var socket = io();
+        socket.on('connect', ()=>{
+            console.log('connected to server');
+        });
+        socket.on('disconnect', ()=>{
+            console.log('disconnected from server');
+        });
+    </script>
 </html>
