emit and broadcast..

--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,14 @@
     <head>
         <meta charset="utf-8"/>
     </head>
+    <style>
+        h1 {
+            color: blue;
+        }
+    </style>
     <body>
         <h1>welcome to chat app</h1>
     </body>
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-        var socket = io();
-        socket.on('connect', ()=>{
-            console.log('connected to server');
-        });
-        socket.on('disconnect', ()=>{
-            console.log('disconnected from server');
-        });
-    </script>
+    <script src="/js/index.js"></script>
 </html>
