add form for messsages and show incoming in browsers

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,16 @@
     </style>
     <body>
         <h1>welcome to chat app</h1>
+
+        <h4>Messages</h4>
+        <ol id="messages"></ol>
+        <form id="message-form">
+            <input type="text" name="message" id="message" size="30" placeholder="Message"/>
+            <button>Send</button>
+        </form>
+        
     </body>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/libs/jquery.js"></script>
     <script src="/js/index.js"></script>
 </html>
