--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,35 @@
                 </form>
                 <button id="send-location">Send Location</button>
             </div>
-        </div>        
+        </div> 
+        <script id="message-template" type="text/template">
+            <li class="message">
+                <div class="message__title">
+                    <h4>{{from}}</h4>
+                    <span>{{createdAt}}</h4>
+                </div>
+                <div class="message__body">
+                    <p>{{message}}</p>
+                </div>
+            </li>
+        </script> 
+        <script id="location-message-template" type="text/template">
+            <li class="message">
+                <div class="message__title">
+                    <h4>{{from}}</h4>
+                    <span>{{createdAt}}</h4>
+                </div>
+                <div class="message__body">
+                    <p>
+                        <a href="{{url}}" target="_blank">My Current Location</a>
+                    </p>
+                </div>
+            </li>
+        </script>       
     </body>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery.js"></script>
+    <script src="/js/libs/moment.js"></script>
+    <script src="/js/libs/mustache.js"></script>
     <script src="/js/index.js"></script>
 </html>
