--- a/public/chat.html
+++ b/public/chat.html
@@ -56,5 +56,6 @@
     <script src="/js/libs/jquery.js"></script>
     <script src="/js/libs/moment.js"></script>
     <script src="/js/libs/mustache.js"></script>
+    <script src="/js/libs/deparam.js"></script>
     <script src="/js/chat.js"></script>
 </html>
